[package]
name = "habitat_api_client"
version = "0.0.0"
edition = "2018"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"

[dependencies]
broadcast = "*"
chrono = "*"
env = "*"
habitat_core = { path = "../core" }
hyper = "*"
reqwest = "*"
log = "*"
pbr = "*"
rand = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tee = "*"
url = "*"
