[package]
name = "habitat_http_client"
version = "0.0.0"
edition = "2018"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
build = "build.rs"
workspace = "../../"

[dependencies]
base64 = "*"
log = "*"
httparse = "*"
# Pending upgrade activities in https://github.com/habitat-sh/core/issues/72
hyper = "*"
# Pending upgrade activities in https://github.com/habitat-sh/core/issues/72
hyper-openssl = "0.7"
# Pending upgrade activities in https://github.com/habitat-sh/core/issues/72
openssl = "*"
serde = "*"
serde_json = "*"
url = "*"

[dependencies.habitat_core]
path = "../core"

[features]
default = []
functional = []
